# diesel-rocket-api

./: .env  Cargo.toml
migrations/2020-06-20-111508_create_posts/: up.sql
migrations/2021-01-22-124713_create_posts/: down.sql  up.sql
migrations/2021-01-30-014826_create_posts/: down.sql  up.sql
migrations/2021-01-30-015255_create_posts/: up.sql
migrations/2021-02-02-083900_create_posts/: down.sql  up.sql
migrations/2021-02-05-005617_create_posts/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/crud/: users.rs
src/models/: mod.rs  model.rs  models.rs  response.rs
src/product/: handler.rs  mod.rs  router.rs
src/tests/: tests.rs
src/utils/: password_encoder.rs
