[package]
name = "diesel-rocket-api"
version = "1.0.0"
authors = ["h18239569764@163.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4"
rocket_contrib = { version = "0.4.5", features = ["json","uuid"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
log = "0.4"
#r2d2-diesel = "1.0"
#r2d2 = "0.8"
