[package]
name = "diesel-rocket-api"
version = "1.0.0"
authors = ["h18239569764@163.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
log = "0.4"
anyhow = { version = "1.0", default-features = false }
uuid = { version = ">=0.7.0, <0.9.0", features = ["v4", "serde"] }
jsonwebtoken = "7.2.0"
md5 = "0.7.0"
rustflake = "0.1.0"
yaml-rust = "0.4"
#captcha
captcha = "0.0.8"
#http client,use rust-tls replace to native tls
reqwest = { version = "0.11",default-features = false, features = ["json","rustls-tls"] }
#qrcode
qrcode = "0.12"
#image code
image = "0.23"